kubernetes/apps/base/network-system/oauth2-proxy/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: auth
  annotations:
    external-dns.kubernetes.io/external: 'true'
spec:
  parentRefs:
    - name: envoy-external
      namespace: network-system
      sectionName: https
    - name: envoy-internal
      namespace: network-system
      sectionName: https
  hostnames:
    - 'auth.${CLUSTER_DOMAIN}'
  rules:
    - backendRefs:
        - name: oauth2-proxy
          port: 80
          weight: 100
